lesson23/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
