lesson23/wp-app.yaml

apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 8880
      targetPort: 80
      nodePort: 30100
  selector:
    app: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: dev
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        command: ["/bin/bash"]
        args: ["-c", "echo 'ServerName localhost' >> /etc/apache2/apache2.conf"]
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 300m
        volumeMounts:
        - name: ps-wp
          mountPath: /var/www/html
      volumes:
      - name: ps-wp
        persistentVolumeClaim:
          claimName: wp-pv-claim
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - minikube-m03
              topologyKey: "kubernetes.io/hostname"
